# brerc-dashboard

./: .env.example  .gitattributes  .gitignore  BUILD_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
api/: Dockerfile  README.md  README_SCAFFOLD.md  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/app/: __init__.py  config.py  db.py  main.py  models.py  security.py
api/app/routers/: distribution.py  health.py  internal.py  occurrences.py  provenance.py  records.py  species.py  species_info.py  summary.py
api/app/services/: licensing.py  species_info.py
api/etl/: cleaning.py  filtering.py  generalisation.py  ignore.py  pipeline.py  rules.py  test_cleaning.py  validation.py
api/etl/tests/: test_cleaning.py  test_dic.py  test_filtering.py  test_generalisation.py  test_validate.py
api/tests/: conftest.py  test_app.py  test_b0_integration.py  test_b6_safety.py  test_generalisation_gate.py  test_internal.py  test_licensing.py  test_smoke.py
data/: README.md
db/: README.md  b0_staging_setup.sql  b6_schema.sql
docs/: ACCESSIBILITY.md  ACCESSIBILITY_STATEMENT.md  ARCHITECTURE.md  DATA_GOVERNANCE.md  DATA_MODEL.md  DECISIONS.md  DEPLOYMENT.md  GETTING_STARTED_GITHUB.md  HANDOVER.md  INTERNAL_DASHBOARD.md  MAINTAINER_GUIDE.md  PLAN.json  PLAN.md  PLAN.yaml  PROJECT_BRIEF.md  PROJECT_STRUCTURE.md  README.md  SENSITIVE_SPECIES.md  plan.schema.json  validate_plan.py
internal-web/: README.md  index.html
proxy/: Caddyfile
web/: .env.example  (+15 more)
(+72 files in other folders)
