[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "brerc-dashboard-api"
version = "0.1.0"
description = "Read-only FastAPI service for the BRERC public dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10,<3",
    "asgi-lifespan>=2.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, comprehensions, pyupgrade.
select = ["E", "F", "I", "B", "C4", "UP"]
# Keep datetime.timezone.utc (works on 3.10+ and reads clearly) rather than the
# 3.11-only datetime.UTC alias that UP017 would force.
ignore = ["UP017"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/Query() in argument defaults is the framework's intended
# pattern, not the B008 mutable-default footgun. Treat them as immutable.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# asyncpg ships no type stubs / py.typed marker.
module = ["asyncpg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]
